clusters/homelab/environments/development/apps/personal-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog-ingress-development
  namespace: development
spec:
  rules:
    - host: personal-blog.flowerhead.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-blog-development
                port:
                  number: 80
