clusters/homelab/environments/development/apps/personal-blog/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: personal-blog-development
  namespace: development
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`personal-blog.development.flowerhead.dev`)
      kind: Rule
      services:
        - name: personal-blog
          port: 80
    # - match: Host(`personal-blog.production.flowerhead.dev`)
    #   kind: Rule
    #   services:
    #     - name: personal-blog
    #       port: 80
  tls:
    secretName: development-tls
